src/test/deca/codegen/valid/InstanciationSub.deca
// Description:
//    extending
//
// Resultats:
//    1
// 
// Historique:
//    cree le 01/01/2023

class B {
	int a;
	void setA(int b){
		this.a = b+1;
	}
	int getA(){
		return this.a;
	}
}
class A extends B {
	void setA(int b){
		this.a = b;
	}
}
{
	B b = new A();
	b.setA(1);
	println(b.getA());	
}
